--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Keyboard</title>
+    <title>Virtual Keyboard Windows OS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
